--- a/src/libnmc-setting/meson.build
+++ b/src/libnmc-setting/meson.build
@@ -3,7 +3,7 @@
 if enable_docs
   assert(enable_introspection, '-Ddocs=true requires -Dintrospection=true')
 
-  merge_cmd = join_paths(meson.source_root(), 'tools', 'generate-docs-nm-settings-docs-merge.py')
+  merge_cmd = files(source_root / 'tools' / 'generate-docs-nm-settings-docs-merge.py')
   settings_docs_input_xml = custom_target(
     'settings-docs-input.xml',
     input: [merge_cmd, nm_settings_docs_xml_gir['nmcli'], nm_property_infos_xml['nmcli']],
@@ -17,7 +17,7 @@ if enable_docs
     ],
   )
 
-  gen_cmd = join_paths(meson.source_root(), 'tools', 'generate-docs-settings-docs.py')
+  gen_cmd = files(source_root / 'tools' / 'generate-docs-settings-docs.py')
   settings_docs_source = custom_target(
     'settings-docs.h',
     input: [gen_cmd, settings_docs_input_xml],
