meson: remove deprecated ExternalProgram.path
Replaced by full_path:
https://mesonbuild.com/Reference-manual_returned_external_program.html#external_programpath

ExternalProgram.full_path was added in meson 0.55 but we support meson
>= 0.51. Because of that, use path or full_path conditionally depending
on the meson version.

This gets rid of the following deprecation warning:
  NOTICE: Future-deprecated features used:
   * 0.48.0: {'module python3'}
   * 0.55.0: {'ExternalProgram.path'}

--- a/man/meson.build
+++ b/man/meson.build
@@ -70,7 +70,7 @@ if enable_introspection
     input: [merge_cmd, nm_property_infos_xml[name], nm_settings_docs_xml_gir[name]],
     output: 'nm-settings-docs-' + name + '.xml',
     command: [
-      python.path(),
+      python_path,
       merge_cmd,
       '@OUTPUT@',
       nm_property_infos_xml[name],
@@ -84,7 +84,7 @@ if enable_introspection
     input: [merge_cmd, nm_property_infos_xml[name], gen_metadata_nm_settings_nmcli_xml, nm_settings_docs_xml_gir[name]],
     output: 'nm-settings-docs-' + name + '.xml',
     command: [
-      python.path(),
+      python_path,
       merge_cmd,
       '@OUTPUT@',
       '--only-properties-from',
