--- a/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
+++ b/src/nmcli/gen-metadata-nm-settings-nmcli.xml.in
@@ -1149,6 +1149,40 @@
         <property name="initial-eps-bearer-apn"
                   nmcli-description="For LTE modems, this sets the APN for the initial EPS bearer that is set up when attaching to the network.  Setting this parameter implies initial-eps-bearer-configure to be TRUE."
                   format="string" />
+        <property name="initial-eps-bearer-username"
+                  nmcli-description="For LTE modems, this sets the username for the initial EPS bearer that is set up when attaching to the network.  Setting this parameter implies initial-eps-bearer-configure to be TRUE."
+                  format="string" />
+        <property name="initial-eps-bearer-password"
+                  nmcli-description="For LTE modems, this sets the password for the initial EPS bearer that is set up when attaching to the network.  Setting this parameter implies initial-eps-bearer-configure to be TRUE."
+                  format="string" />
+        <property name="initial-eps-bearer-password-flags"
+                  nmcli-description="Flags indicating how to handle the &quot;initial-eps-bearer-password&quot; property."
+                  format="flags (NMSettingSecretFlags)"
+                  values="none (0x0), agent-owned (0x1), not-saved (0x2), not-required (0x4)" />
+        <property name="initial-eps-bearer-noauth"
+                  nmcli-description="For LTE modems, this sets NOAUTH authentication method for the initial EPS bearer that is set up when attaching to the network. If TRUE, do not require the other side to authenticate itself to the client. If FALSE, require authentication from the remote side.  In almost all cases, this should be TRUE."
+                  format="boolean"
+                  values="true/yes/on, false/no/off" />
+        <property name="initial-eps-bearer-refuse-eap"
+                  nmcli-description="For LTE modems, this disables EAP authentication method for the initial EPS bearer that is set up when attaching to the network."
+                  format="boolean"
+                  values="true/yes/on, false/no/off" />
+        <property name="initial-eps-bearer-refuse-pap"
+                  nmcli-description="For LTE modems, this disables PAP authentication method for the initial EPS bearer that is set up when attaching to the network."
+                  format="boolean"
+                  values="true/yes/on, false/no/off" />
+        <property name="initial-eps-bearer-refuse-chap"
+                  nmcli-description="For LTE modems, this disables CHAP authentication method for the initial EPS bearer that is set up when attaching to the network."
+                  format="boolean"
+                  values="true/yes/on, false/no/off" />
+        <property name="initial-eps-bearer-refuse-mschap"
+                  nmcli-description="For LTE modems, this disables MSCHAP authentication method for the initial EPS bearer that is set up when attaching to the network."
+                  format="boolean"
+                  values="true/yes/on, false/no/off" />
+        <property name="initial-eps-bearer-refuse-mschapv2"
+                  nmcli-description="For LTE modems, this disables MSCHAPV2 authentication method for the initial EPS bearer that is set up when attaching to the network."
+                  format="boolean"
+                  values="true/yes/on, false/no/off" />
     </setting>
     <setting name="hostname" >
         <property name="priority"
